--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
+        <link href="https://cdn.staticfile.org/video.js/8.6.1/alt/video-js-cdn.min.css" rel="stylesheet">
+        <script src="https://cdn.staticfile.org/video.js/8.6.1/alt/video.core.min.js"></script>        
         <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">
         <script>
                (() => {
@@ -148,6 +150,19 @@
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
                 使用沼气电池的手表，699大洋
+    <div class="text-center">
+     <video
+       id="vid1"
+       class="video-js"
+       controls
+       preload="auto"    
+       data-setup='{}'>
+       <source src="https://nqhyee.vsc.icu/video/HomoWatch.mp4" type="video/mp4"></source>
+        <p class="vjs-no-js">
+            把JavaScript开开
+        </p>
+     </video>
+   </div>
             </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">
                 2023-9-4
@@ -331,11 +346,19 @@
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
                 使用沼气电池的手表，699大洋
-          <p align="center">
-            <video width="400px" controls>
-                <source src="/homo/臭手表/HomoWatch.mp4"type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </p>                
+<div class="text-center">
+     <video
+       id="vid1"
+       class="video-js"
+       controls
+       preload="auto"    
+       data-setup='{}'>
+       <source src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE3L0hvbW9XYXRjaCAob25saW5lLXZpZGVvLWN1dHRlci5jb20pICgxKS5tcDQ/HomoWatch.mp4?sign=nuJYsUlzXX0lUCs2aV3Pu0Z2d6d_gP9k3R-LK2g2MKw%3D%3A0" type="video/mp4"></source>
+        <p class="vjs-no-js">
+            把JavaScript开开
+        </p>
+     </video>
+   </div>                  
             </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">
                 2023-9-4
