--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
          })(window, document, "clarity", "script", "hh7z8az9h5");
         </script>
-        <script src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzE0L3ZpZXctaW1hZ2UubWluLmpz/view-image.min.js?sign=f7N7Ru504YJqPyFgAitHkNOp-qfRV46v49qqq8Ln5PQ%3D%3A0"></script>
+        <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
