--- a/关于/index.html
+++ b/关于/index.html
@@ -81,7 +81,11 @@
               })
           })
          })()  
-        </script>  
+        </script>
+        <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
+         <script>
+           window.ViewImage && ViewImage.init('.img-fluid');
+        </script>         
     </head>
     <body>
     <!--导航栏-->
@@ -116,7 +120,7 @@
             </div>
         </div>
          <img class="img-fluid" src="money.jpg" alt="打钱"> <br>
-         <h2>猪圈是一个非盈利组织，捐助我们！<mark>捐助的钱将用于购买顶级域名</mark></h2>         
+         <h2>猪圈是一个非盈利组织，捐助我们！</h2>         
          <h1>小猪邮箱：pig810@outlook.com</h1>
      <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
