--- a/文章/我emo了/index.html
+++ b/文章/我emo了/index.html
@@ -114,7 +114,21 @@
             <!--评论系统-->
         <link href="https://cdn.staticfile.org/waline/2.15.5/waline.min.css" rel="stylesheet">
         <div id="waline"></div>
-        <script type="module" src="https://nqhyee.vsc.icu/pl"></script>
+        <script type="module">
+          import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+                
+
+          init({
+          el: '#waline',
+          serverURL: 'https://waline-1-r1862846.deta.app',
+          reaction: true,
+          reaction: [
+         'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
+         'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
+         'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
+          ],  
+          }); 
+        </script>
              <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
