--- a/blog.html
+++ b/blog.html
@@ -124,10 +124,41 @@
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大杂烩</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">日志</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">homo</a></li>
-        </ul>         
+        </ul> 
+               <!--字体调节--> 
+        <div class="d-flex flex-row-reverse">
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             ⋮   
+          </button>
+        </div>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body p-3 my-3">
+            <div class="form-group">
+              <label for="font-size-range">字体大小调节</label>
+              <input type="range" min="12" max="24" value="16" class="form-control-range" id="font-size-range">
+            </div>            
+          </div>
+        </div>
+        <script src="https://nqhyee.vsc.icu/ziti.js"></script>        
         <!--全部-->
         <div class="tab-content">
             <div id="home" class="container tab-pane active">
+        <div class="card">
+            <h5 class="card-header text-center">安卓浏览器推荐</h5>
+            <div class="card-body">
+                <div class="text-center">安卓浏览器，还有文章的新页面！                           
+                </div>
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-10-22
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
+        <br>
         <div class="card">
             <h5 class="card-header text-center">未来可寄</h5>
             <div class="card-body">
@@ -245,6 +276,21 @@
             <!--大杂烩-->
             <div id="menu3" class="container tab-pane fade">
                 <br>
+        <div class="card">
+            <h5 class="card-header text-center">安卓浏览器推荐</h5>
+            <div class="card-body">
+                <div class="text-center">安卓浏览器，还有文章的新页面！                           
+                </div>
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-10-22
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>                
         <div class="card">
             <h5 class="card-header text-center">未来可寄</h5>
             <div class="card-body">
