--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
            </a> 
         </div>
         <!-- 模态框 -->
-        <div class="modal" id="myModal">
-          <div class="modal-dialog modal-dialog-centered">
+        <div class="modal fade" id="myModal" data-bs-target="#staticBackdrop">
+          <div class="modal-dialog modal-dialog-centered modal-fullscreen">
             <div class="modal-content">
          	<!-- 模态框头部 -->
             <div class="modal-header">
@@ -134,12 +134,12 @@
       
            <!-- 模态框主体 -->
            <div class="modal-body">
-             要期中考试了，能启猪寄
+             鱿鱼主域名不稳定，新增一个备用域名nqh.ds666.top
            </div>
       
          	<!-- 模态框底部 -->
            <div class="modal-footer">
-             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">滚</button>             
+             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">yes,sir</button>             
            </div>
           </div>
         </div>
