--- a/blog.html
+++ b/blog.html
@@ -106,13 +106,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>
-        <!--回到顶部-->
-        <div class="fixed-bottom">
-           <a href="#" class="btn btn-primary bth-sm">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
-           </a> 
-        </div>        
+        </nav>         
         <h1 class="text-center">小猪的blog</h1> <br>
         <div class="text-center">
           <iframe width="100%" height="50%" src="https://www.widgets.link/#/sentence?fz=42&fc=37352f&bg=&p=92&t=&s=false&br=5&bs=true&bpc=ffffff&as=24&aa=right"></iframe>
@@ -125,6 +119,12 @@
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">日志</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">homo</a></li>
         </ul> 
+                <!--回到顶部-->
+        <div class="fixed-bottom">
+           <a href="#" class="btn btn-primary bth-sm">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
+           </a> 
+        </div>
                <!--字体调节--> 
         <div class="d-flex flex-row-reverse">
           <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -139,7 +139,57 @@
             </div>            
           </div>
         </div>
-        <script src="https://nqhyee.vsc.icu/ziti.js"></script>        
+<script>
+ // 获取文本段落和调节条元素
+var text = document.getElementById("text");
+var range = document.getElementById("font-size-range");
+
+// 创建 cookie
+function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + (value || "") + expires + "; path=/";
+}
+
+// 读取 cookie
+function getCookie(name) {
+  var nameEQ = name + "=";
+  var ca = document.cookie.split(";");
+  for (var i = 0; i < ca.length; i++) {
+    var c = ca[i];
+    while (c.charAt(0) == " ") c = c.substring(1, c.length);
+    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+  }
+  return null;
+}
+
+// 初始化调节条和文本段落的字体大小
+function initFontSize() {
+  var fontSize = getCookie("fontSize");
+  if (fontSize != null) {
+    range.value = fontSize;
+    text.style.fontSize = fontSize + "px";
+  }
+}
+
+// 更新文本段落的字体大小和 cookie
+function updateFontSize() {
+  var fontSize = range.value;
+  text.style.fontSize = fontSize + "px";
+  setCookie("fontSize", fontSize, 365);
+}
+
+// 监听调节条的 input 事件
+range.addEventListener("input", updateFontSize);
+
+// 页面加载完成后初始化字体大小
+window.addEventListener("load", initFontSize);
+       
+</script>        
         <!--全部-->
         <div class="tab-content">
             <div id="home" class="container tab-pane active">
