--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
               })
           })
          })()  
-        </script>  
+        <script src="/ziti.js"></script>
         <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
@@ -91,9 +91,13 @@
     </head>
     <body>
     <!--导航栏-->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container-fluid">
-                <h3>猪圈</h3> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                <a class="navbar-brand" href="#">
+                  <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top">
+                  猪圈
+                </a>  
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
@@ -138,58 +142,7 @@
               <input type="range" min="12" max="24" value="16" class="form-control-range" id="font-size-range">
             </div>            
           </div>
-        </div>
-<script>
- // 获取文本段落和调节条元素
-var text = document.getElementById("text");
-var range = document.getElementById("font-size-range");
-
-// 创建 cookie
-function setCookie(name, value, days) {
-  var expires = "";
-  if (days) {
-    var date = new Date();
-    date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
-    expires = "; expires=" + date.toUTCString();
-  }
-  document.cookie = name + "=" + (value || "") + expires + "; path=/";
-}
-
-// 读取 cookie
-function getCookie(name) {
-  var nameEQ = name + "=";
-  var ca = document.cookie.split(";");
-  for (var i = 0; i < ca.length; i++) {
-    var c = ca[i];
-    while (c.charAt(0) == " ") c = c.substring(1, c.length);
-    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-  }
-  return null;
-}
-
-// 初始化调节条和文本段落的字体大小
-function initFontSize() {
-  var fontSize = getCookie("fontSize");
-  if (fontSize != null) {
-    range.value = fontSize;
-    text.style.fontSize = fontSize + "px";
-  }
-}
-
-// 更新文本段落的字体大小和 cookie
-function updateFontSize() {
-  var fontSize = range.value;
-  text.style.fontSize = fontSize + "px";
-  setCookie("fontSize", fontSize, 365);
-}
-
-// 监听调节条的 input 事件
-range.addEventListener("input", updateFontSize);
-
-// 页面加载完成后初始化字体大小
-window.addEventListener("load", initFontSize);
-       
-</script>        
+        </div>   
         <!--全部-->
         <div class="tab-content">
             <div id="home" class="container tab-pane active">
