--- a/留言.html
+++ b/留言.html
@@ -85,9 +85,13 @@
     </head>
     <body>
         <!--导航栏-->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container-fluid">
-                <h3>猪圈</h3> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                <a class="navbar-brand" href="#">
+                  <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top">
+                  猪圈
+                </a>  
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
@@ -111,9 +115,15 @@
 
           init({
           el: '#waline',
-          serverURL: 'https://waline-1-r1862846.deta.app',
-         });
-        </script>
+          serverURL: 'https://waline-1-i3324437.deta.app/',
+          reaction: true,
+          reaction: [
+         'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
+         'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
+         'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
+          ],             
+          dark: 'auto',          
+          }); 
          <br>
       <!--按钮-->
         <a href="#" class="btn btn-outline-success">回到顶部 
