--- a/关于/index.html
+++ b/关于/index.html
@@ -88,8 +88,13 @@
         </script>         
     </head>
     <body>
+    <div class="fixed-bottom">
+       <a href="#" class="btn btn-primary bth-sm">
+         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
+       </a> 
+    </div>    
     <!--导航栏-->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container-fluid">
                 <h3>猪圈</h3> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -112,12 +117,15 @@
         </div>
         <h3>成分</h3>
         <div class="progress">
-            <div class="progress-bar" style="width:80%">
+            <div class="progress-bar" style="width:70%">
                 BootStrap5
             </div>
             <div class="progress-bar bg-warning" style="width:20%">
                 Javascipt
             </div>
+            <div class="progress-bar bg-warning" style="width:10%">
+                Javascipt
+            </div>            
         </div>
          <img class="img-fluid" src="money.jpg" alt="打钱"> <br>
          <h2>猪圈是一个非盈利组织，捐助我们！</h2>         
