--- a/文章/上东兴的能启猪/index.html
+++ b/文章/上东兴的能启猪/index.html
@@ -114,9 +114,15 @@
 
           init({
           el: '#waline',
-          serverURL: 'https://waline-1-r1862846.deta.app',
-          });
-        </script> 
+          serverURL: 'https://waline-1-i3324437.deta.app/',
+          reaction: true,
+          reaction: [
+         'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
+         'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
+         'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
+          ],             
+          dark: 'auto',          
+          }); 
              <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
