--- a/文章/安卓浏览器/index.html
+++ b/文章/安卓浏览器/index.html
@@ -100,25 +100,36 @@
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
+        
     </head>
-    <body>
-    <!--导航栏-->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <h3>猪圈</h3> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+    <body>    
+<!--导航栏-->
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+            <div class="container-fluid d-flex">            
+                <a class="navbar-brand" href="#">
+                  <img src="https://cdnjson.com/images/2023/10/28/212239qsGyuK1o4RRFyM4E.png" alt="Logo" width="30" height="40" class="d-inline-block align-text-top">
+                  猪圈
+                </a>  
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://nqhyee.vsc.icu/">首页</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/考试.html">考试倒计时</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/留言.html">留言</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog.html">文章</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/表情包">表情包</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/小玩意导航页.html">小工具&amp;小游戏</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/关于">关于</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/下载.html">下载</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/留言.html">留言</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">文章</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/表情包">表情包</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/小玩意导航页.html">小工具&amp;小游戏</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/关于">关于</a></li>
                     </ul>
                 </div>
             </div>
-        </nav> 
+        </nav>  
+        <!--回到顶部-->
+        <div class="fixed-bottom">
+           <a href="#" class="btn btn-primary bth-sm">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
+           </a> 
+        </div>        
         <!--标题-->        
           <h1 class="display-1">安卓浏览器推荐</h1><br>
            <div class="d-flex">           
@@ -158,7 +169,7 @@
         <div class="mt-4 p-5 bg-primary text-white rounded">
           <h2>先来下载链接</h2>
            <a href="https://edgemobiledownload.chinacloudsites.cn/EdgeDownloader?channel=1">下载edge</a>
-           <a href="https://downloads.apkonline.net/myapkdownloader/apk-downloads/de.baumann.browser1-01.apk">下载foss</a>
+           <a href="https://codeberg.org/Gaukler_Faun/FOSS_Browser/releases/download/v10.1/app-debug.apk">下载foss</a>
            <a href="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzIyL0ljZXJhdmVuX3YyLjAuMy5hcGs/Iceraven_v2.0.3.apk?sign=S2SFm-BdR0hIWIxSF8st-pstQgKcHR4Jq1N5F1JYUAc%3D%3A0">下载Iceraven</a>
         </div>
         <p style="text-indent:2em">第一篇正经文章
@@ -191,7 +202,7 @@
         <p class="text-center">霸屏的屑，有跨越视口的宽度</p>
         
         <!--评论系统-->
-        <link href="https://cdn.staticfile.org/waline/2.15.5/waline.min.css" rel="stylesheet">
+        <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
         <div id="waline"></div>
         <script type="module">
           import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
@@ -199,13 +210,14 @@
 
           init({
           el: '#waline',
-          serverURL: 'https://waline-1-r1862846.deta.app',
+          serverURL: 'https://waline-1-i3324437.deta.app/',
           reaction: true,
           reaction: [
          'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
          'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
          'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
-          ],  
+          ],             
+          dark: 'auto',               
           }); 
         </script> 
         <!--页脚--> 
