--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <meta name="description" content="欢迎来到能启猪的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
     </head>
     <body>
-    <!--导航栏-->
+<!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container-fluid d-flex">            
                 <a class="navbar-brand" href="#">
@@ -119,7 +119,7 @@
                     </ul>
                 </div>
             </div>
-        </nav> 
+        </nav>     
         <!--回到顶部-->
         <div class="fixed-bottom">
            <a href="#" class="btn btn-primary bth-sm">
@@ -164,13 +164,13 @@
           }
         </script>
 
-        <div class="container-fluid bg-primary text-center rounded">                                                                    
-          <h4 class="text-center text-white">请收藏我们的网址</h4>
-          <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewbox="0 0 16 16">
-             <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-          </svg>
-          <p class="text-center text-white">nqhyee.vsc.icu</p>
-        </div> 
+        <div class="container-fluid bg-primary text-center rounded">    
+               <h4 class="text-center text-white">请收藏我们的网址</h4>
+                 <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewbox="0 0 16 16">
+                     <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
+                </svg>
+                <p class="text-center text-white">nqhyee.vsc.icu</p>
+        </div>                                                                                   
         <!--字体调节--> 
         <div class="d-flex flex-row-reverse">
           <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -267,34 +267,23 @@ window.addEventListener("load", initFontSize);
         <br>
         <!--卡片-->
       <div class="shadow p-4 mb-4">
-        <h4 class="text-center display-4">臭手表
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-card-text" viewbox="0 0 16 16">
-             <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
-             <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
-          </svg>        
-        </h4>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">臭手表（大悲）</h5>
-            <div class="card-body">
-                使用沼气电池的手表，699大洋
-            </div>
-            <div class="text-center">
-              <video id="vid1" class="video-js" controls preload="auto" data-setup="{}">
-                <source src="https://nqhyee.vsc.icu/video/HomoWatch.mp4" type="video/mp4">
-                  <p class="vjs-no-js">
-                      把给我JavaScript开开
-                  </p>
-              </video>
-           </div>
-            <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>        
-            <div class="card-footer text-center">
-                2023-9-4
-            </div>
-        </div> 
-        <br>
-        <br>
-        <br>
+         <h5 class="card-header text-center">安卓浏览器推荐</h5>
+             <div class="card-body">
+                  <div class="text-center">
+                    安卓浏览器，还有文章的新页面！ 
+                  </div>
+                   <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="sketch1698577243459.png" border="0" />
+             </div>
+             <div class="d-grid">
+                <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
+             </div>
+             <div class="card-footer text-center">
+                2023-10-27
+                <i class="bi bi-calendar4"></i>                      
+             </div>
+                             
+         <br>
+      </div>
       <div class="shadow p-4 mb-4">
         <h4 class="text-center display-4">文章
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-body-text" viewbox="0 0 16 16">
@@ -355,7 +344,7 @@ window.addEventListener("load", initFontSize);
          <h4 class="text-center display-4">联系我们</h4>
          <img class="img-fluid" src="https://cdnjson.com/images/2023/09/05/-2023-09-05-20.46_1_edit_4059801933233.jpg" alt="-2023-09-05-20.46_1_edit_4059801933233.jpg" border="0">
       </div>
-        <!--按钮-->       
+      
             <br>
              <!--页脚--> 
         <div class="p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
