--- a/文章/安卓浏览器/index.html
+++ b/文章/安卓浏览器/index.html
@@ -168,9 +168,9 @@
         <br>
         <div class="mt-4 p-5 bg-primary text-white rounded">
           <h2>先来下载链接</h2>
-           <a href="https://edgemobiledownload.chinacloudsites.cn/EdgeDownloader?channel=1">下载edge</a>
-           <a href="https://codeberg.org/Gaukler_Faun/FOSS_Browser/releases/download/v10.1/app-debug.apk">下载foss</a>
-           <a href="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzIyL0ljZXJhdmVuX3YyLjAuMy5hcGs/Iceraven_v2.0.3.apk?sign=S2SFm-BdR0hIWIxSF8st-pstQgKcHR4Jq1N5F1JYUAc%3D%3A0">下载Iceraven</a>
+           <a class="bg-dark" href="https://edgemobiledownload.chinacloudsites.cn/EdgeDownloader?channel=1">下载edge</a>
+           <a class="bg-dark" href="https://codeberg.org/Gaukler_Faun/FOSS_Browser/releases/download/v10.1/app-debug.apk">下载foss</a>
+           <a class="bg-dark" href="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzEwLzIyL0ljZXJhdmVuX3YyLjAuMy5hcGs/Iceraven_v2.0.3.apk?sign=S2SFm-BdR0hIWIxSF8st-pstQgKcHR4Jq1N5F1JYUAc%3D%3A0">下载Iceraven</a>
         </div>
         <p style="text-indent:2em">第一篇正经文章
           众嗦粥之，安卓有好多浏览器<div class="mask">废话</div>在能启猪教盲憨用邮箱时，我看到了盲憨的屎山浏览器，甚至比我的网站代码还屎山（迫真）
