--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<html lang="zh-CN">
+<html lang="zh-CN" id="text">
     <head>
         <title>文章:猪圈-能启猪运营</title>
         <meta charset="utf-8">
@@ -88,6 +88,7 @@
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
+        <script src="/ziti.js"></script>
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
@@ -121,6 +122,20 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" />
                 </svg> </a>
+        </div>
+        <!--字体调节--> 
+        <div class="d-flex flex-row-reverse">
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+             ⋮   
+          </button>
+        </div>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body p-3 my-3">
+            <div class="form-group">
+              <label for="font-size-range">字体大小调节</label>
+              <input type="range" min="12" max="24" value="16" class="form-control-range" id="font-size-range">
+            </div>            
+          </div>
         </div> 
         <!--全部-->        
         <div class="tab-content">
