--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
-        <script src="/ziti.js"></script>
+        <script src="https://nqhyee.vsc.icu/ziti.js"></script>
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
