--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN" id="text">
+<html lang="zh-CN">
     <head>
         <title>首页:猪圈-能启猪运营</title>
         <meta charset="utf-8">
@@ -163,79 +163,13 @@
          myModal.show();
           }
         </script>
-
         <div class="container-fluid bg-primary text-center rounded">    
                <h4 class="text-center text-white">请收藏我们的网址</h4>
                  <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewbox="0 0 16 16">
                      <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
                 </svg>
                 <p class="text-center text-white">nqhyee.vsc.icu</p>
-        </div>                                                                                   
-        <!--字体调节--> 
-        <div class="d-flex flex-row-reverse">
-          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-             ⋮   
-          </button>
-        </div>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body p-3 my-3">
-            <div class="form-group">
-              <label for="font-size-range">字体大小调节</label>
-              <input type="range" min="12" max="24" value="16" class="form-control-range" id="font-size-range">
-            </div>            
-          </div>
-        </div>
-<script>
- // 获取文本段落和调节条元素
-var text = document.getElementById("text");
-var range = document.getElementById("font-size-range");
-
-// 创建 cookie
-function setCookie(name, value, days) {
-  var expires = "";
-  if (days) {
-    var date = new Date();
-    date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
-    expires = "; expires=" + date.toUTCString();
-  }
-  document.cookie = name + "=" + (value || "") + expires + "; path=/";
-}
-
-// 读取 cookie
-function getCookie(name) {
-  var nameEQ = name + "=";
-  var ca = document.cookie.split(";");
-  for (var i = 0; i < ca.length; i++) {
-    var c = ca[i];
-    while (c.charAt(0) == " ") c = c.substring(1, c.length);
-    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-  }
-  return null;
-}
-
-// 初始化调节条和文本段落的字体大小
-function initFontSize() {
-  var fontSize = getCookie("fontSize");
-  if (fontSize != null) {
-    range.value = fontSize;
-    text.style.fontSize = fontSize + "px";
-  }
-}
-
-// 更新文本段落的字体大小和 cookie
-function updateFontSize() {
-  var fontSize = range.value;
-  text.style.fontSize = fontSize + "px";
-  setCookie("fontSize", fontSize, 365);
-}
-
-// 监听调节条的 input 事件
-range.addEventListener("input", updateFontSize);
-
-// 页面加载完成后初始化字体大小
-window.addEventListener("load", initFontSize);
-       
-</script>        
+        </div>                                                                                          
         <!-- 栏目 -->
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">小猪漫画</a></li>
