--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<html lang="zh-CN" id="text">
+<html lang="zh-CN">
     <head>
         <title>文章:猪圈-能启猪运营</title>
         <meta charset="utf-8">
@@ -83,12 +83,20 @@
                 })
               })
           })
-         })()         
+          })() 
+        </script>        
         <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
         </script>
-        <script src="https://nqhyee.vsc.icu/ziti.js"></script>
+        <style>
+          .p
+          {
+            border-left:9px solid #4169E1;
+            background-color:#87CEFA;
+            padding: 15px;
+          }
+        </style>          
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
@@ -106,11 +114,17 @@
                 </div>
             </div>
         </nav>
-        <h1 class="text-center">小猪的blog</h1> <br>
-        <div class="text-center">
-        <iframe width="100%" height="50%" src="https://www.widgets.link/#/sentence?fz=42&amp;fc=37352f&amp;bg=&amp;p=92&amp;t=&amp;s=false&amp;br=5&amp;bs=true&amp;bpc=ffffff&amp;as=24&amp;aa=right"></iframe>
-        </div>
-        <h6 class="display-6 text-center">最近文章</h6> <br> <!-- 栏目 -->
+        <h1 class="text-center">小猪的blog</h1> <br>        
+        <h6 class="display-6 text-center">最近文章</h6> <br>
+        <div class="text-center p text-dark">
+          <script>
+				var strArry=new Array("出去！","王六童，你手揍什么的","我看你要上天","猴子分桃，桃子分猴","你用脚趾头仔细想一想，是那样画的吗？","你给我上后面站着去","哎呀，我去","唉","画图不用尺子懒死了你就");
+				var adv;
+				adv=strArry[parseInt(Math.random()*8)];
+				document.write(adv);
+	      </script>
+	    </div>  
+         <!-- 栏目 -->
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">全部</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大杂烩</a></li>
@@ -122,21 +136,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" />
                 </svg> </a>
-        </div>
-        <!--字体调节--> 
-        <div class="d-flex flex-row-reverse">
-          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-             ⋮   
-          </button>
-        </div>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body p-3 my-3">
-            <div class="form-group">
-              <label for="font-size-range">字体大小调节</label>
-              <input type="range" min="12" max="24" value="16" class="form-control-range" id="font-size-range">
-            </div>            
-          </div>
-        </div> 
+        </div>       
         <!--全部-->        
         <div class="tab-content">
             <div id="home" class="container tab-pane active">
@@ -164,7 +164,7 @@
                         <div class="text-center">
                             烧饼快气死了，工资怎么这么高，王六童都想糊屎山了
                         </div> 
-                        <img class="img-fluid" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0">
+                        <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/09/2023_1002_182045.png" alt="2023_1002_182045.png" border="0">
                     </div>
                     <div class="d-grid">
                       <a href="https://nqhyee.vsc.icu/文章/未来可寄" class="btn btn-primary">阅读</a>
