--- a/留言.html
+++ b/留言.html
@@ -3,9 +3,9 @@
         <title>留言板:猪圈-能启猪运营</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet"/>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-        <meta name="description" content="留言：猪圈-使用LIGHTTPD能启猪运营">
+        <meta name="description" content="留言：猪圈-能启猪运营">
         <script>
                (() => {
           'use strict'
@@ -107,28 +107,19 @@
         </nav>   
         <h1>留言</h1>
          <!--评论系统-->
-         <link href="https://cdn.staticfile.org/waline/2.15.5/waline.css" rel="stylesheet">
-         <div id="waline"></div>
+          <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
+        <div id="waline"></div>
         <script type="module">
           import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
                 
 
           init({
           el: '#waline',
-          serverURL: 'https://waline-1-i3324437.deta.app/',
-          reaction: true,
-          reaction: [
-         'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
-         'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
-         'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
-          ],             
-          dark: 'auto',          
+          serverURL: 'https://waline-1-i3324437.deta.app/',               
+          dark: 'auto',               
           }); 
+        </script>
          <br>
-      <!--按钮-->
-        <a href="#" class="btn btn-outline-success">回到顶部 
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
-        </a> 
             <br>
              <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
