--- a/index.html
+++ b/index.html
@@ -115,30 +115,22 @@
           </svg>      
         </h4>
         <br>
-        <div class="card">
-            <h5 class="card-header text-center">能启猪上东兴</h5>
-            <div class="card-body">
-                <div class="text-center">盲憨和王六童都上了27                                   
-                </div>
-            </div> 
-            <div class="d-grid">
-              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
-            </div>
-            <div class="card-footer text-center">
-                2023-7-8 
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-                </svg>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <h5 class="card-header text-center">盲憨把自己压缩了</h5>
-            <div class="card-body">QQ浏览器，我做错了什么？
-            </div> <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读 </a>
-            <div class="card-footer text-center">2023-6-18</div>
-        </div> 
-        <br>
-        <br>
+         <div class="card col-md">
+           <h5 class="card-header text-center">11班玩炸药</h5>
+              <div class="card-body">
+                 <div class="text-center">
+                     11班炸了
+                 </div>                    
+              </div>
+              <div class="d-grid">
+                <a href="/文章/11班炸药/" class="btn btn-primary">阅读</a>
+              </div>
+              <div class="card-footer text-center">
+                2023-11-4
+                <i class="bi bi-calendar4"></i>                      
+              </div>                         
+              <br>
+         </div>
       </div>
       <div class="shadow p-4 mb-4">
         <h4 class="text-center display-4">日志
@@ -146,8 +138,7 @@
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
             <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z" />
           </svg>
-        </h4>
-      </div>
+        </h4>     
         <br>
         <div class="card">
             <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
