--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,22 @@
         <!--全部-->        
         <div class="tab-content animate__animated animate__fadeInLeftBig">
             <div id="home" class="container tab-pane active">
+                <div class="card col-md">
+                    <h5 class="card-header text-center">11班玩炸药</h5>
+                    <div class="card-body">
+                        <div class="text-center">
+                            11班炸了
+                        </div>                    
+                    </div>
+                    <div class="d-grid">
+                      <a href="/文章/11班炸药/" class="btn btn-primary">阅读</a>
+                    </div>
+                    <div class="card-footer text-center">
+                        2023-11-4
+                        <i class="bi bi-calendar4"></i>                      
+                    </div>
+                </div>               
+                <br>
               <div class="row"> 
                 <div class="card col-md">
                     <h5 class="card-header text-center">安卓浏览器推荐</h5>
