--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </a> 
         </div> 
       <!-- 模态框 -->
-<div class="modal" id="myModal">
+<div class="modal fade" id="myModal">
   <div class="modal-dialog">
     <div class="modal-content">
     	<!-- 模态框头部 -->
@@ -143,24 +143,36 @@
       </div>
       
         <!--卡片-->
-     <div class="animate__animated animate__fadeInLeftBig col-md">   
+     <div class="animate__animated animate__fadeInLeftBig col-md">          
        <div class="shadow p-4 mb-4">
-         <h5 class="card-header text-center">安卓浏览器推荐</h5>
-             <div class="card-body">
-                  <div class="text-center">
-                    安卓浏览器，还有文章的新页面！ 
-                  </div>
-                   <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="sketch1698577243459.png" border="0" />
-             </div>
-             <div class="d-grid">
-                <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
-             </div>
-             <div class="card-footer text-center">
-                2023-10-27
+          <div class="card col-md p-3 my-3">                
+              <div class="card-body text-center">                    
+                 <video
+                    id="my-player"
+                    class="video-js"
+                    controls
+                    preload="auto"
+                    data-setup='{}'>
+                    <source src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzExLzA2L3N0dWRpb192aWRlb18xNjk5MTQzMTI3MjE1Lm1wNA/studio_video_1699143127215.mp4?sign=oFCbIKo9MF9rmpJGOysuHAs2AjEK3T1XK3Wp7oGnKrI%3D%3A0" type="video/mp4"></source>
+                    <p class="vjs-no-js">
+                       开开js
+                        <a href="https://videojs.com/html5-video-support/" target="_blank">
+                           supports HTML5 video
+                        </a>
+                    </p>
+                 </video>
+              </div>                                     
+              <br>
+              <h5 class="text-center">屑视频</h5> 
+              <div class="text-center">
+                魔改班歌 
+              </div>
+              <hr> 
+              <div class="text-center">
+                2023-11-6
                 <i class="bi bi-calendar4"></i>                      
-             </div>
-                             
-         <br>
+              </div>                              
+          </div>
        </div>
       <div class="shadow p-4 mb-4">
         <h4 class="text-center display-4">文章
