--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,7 @@
             background-color:#87CEFA;
             padding: 15px;
           }
+          .tab-content{margin: 30px;}
         </style>     
     </head>
     <body><!--导航栏-->
@@ -66,35 +67,65 @@
         <!--全部-->        
         <div class="tab-content animate__animated animate__fadeInLeftBig">
             <div id="home" class="container tab-pane active">
-                <div class="card col-md">
-                    <h5 class="card-header text-center">11班玩炸药</h5>
+              <div class="row">
+                <div class="card col-md p-3 my-3">                
+                    <div class="card-body text-center">                    
+                        <video
+                          id="my-player"
+                          class="video-js"
+                          controls
+                          preload="auto"
+                          data-setup='{}'>
+                          <source src="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzExLzA2L3N0dWRpb192aWRlb18xNjk5MTQzMTI3MjE1Lm1wNA/studio_video_1699143127215.mp4?sign=oFCbIKo9MF9rmpJGOysuHAs2AjEK3T1XK3Wp7oGnKrI%3D%3A0" type="video/mp4"></source>
+                          <p class="vjs-no-js">
+                            开开js
+                             <a href="https://videojs.com/html5-video-support/" target="_blank">
+                               supports HTML5 video
+                             </a>
+                          </p>
+                        </video>
+                    </div>                                    
+                    <h5 class="text-center">屑视频</h5> 
+                    <div class="text-center">
+                       魔改班歌 
+                    </div>
+                    <hr>                                      
+                    <div class="text-center">
+                        2023-11-6
+                        <i class="bi bi-calendar4"></i>                      
+                    </div>
+                </div>                                               
+                <div class="card col-md text-center p-3 my-3">
+                    <img class="img-fluid rounded" src="https://z1.ax1x.com/2023/11/06/pil02eU.md.jpg" alt="pil02eU.jpg" border="0" />
+                    <h5 class="text-center">11班玩炸药</h5>                
                     <div class="card-body">
                         <div class="text-center">
                             11班炸了
                         </div>                    
                     </div>
+                    <hr>
                     <div class="d-grid">
                       <a href="/文章/11班炸药/" class="btn btn-primary">阅读</a>
                     </div>
-                    <div class="card-footer text-center">
+                    <div class=" text-center">
                         2023-11-4
                         <i class="bi bi-calendar4"></i>                      
                     </div>
-                </div>               
-                <br>
+                </div>                              
               <div class="row"> 
-                <div class="card col-md">
-                    <h5 class="card-header text-center">安卓浏览器推荐</h5>
-                    <div class="card-body">
-                        <div class="text-center">
-                            安卓浏览器，还有文章的新页面！ 
-                        </div>
+                <div class="card col-md">                
+                    <div class="card-body">                    
                         <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="sketch1698577243459.png" border="0" />
                     </div>
+                    <h5 class="text-center">安卓浏览器推荐</h5> 
+                    <div class="text-center">
+                            安卓浏览器，还有文章的新页面！ 
+                    </div>
+                    <hr> 
                     <div class="d-grid">
                       <a href="https://nqhyee.vsc.icu/文章/安卓浏览器/" class="btn btn-primary">阅读</a>
-                    </div>
-                    <div class="card-footer text-center">
+                    </div>                    
+                    <div class="text-center">
                         2023-10-27
                         <i class="bi bi-calendar4"></i>                      
                     </div>
@@ -215,7 +246,9 @@
                     <div class="card-footer text-center">
                         2023-6-19
                     </div>
-                </div> <br>             
+                    <br>
+                </div>
+              </div>                         
             </div>
             <!--大杂烩-->
             <div id="menu3" class="container tab-pane fade"><br>
