--- a/下载.html
+++ b/下载.html
@@ -6,87 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/js/bootstrap.min.js"></script>
-        <meta name="description" content="404notfonund">
-        <script>
-               (() => {
-          'use strict'
-
-          const getStoredTheme = () => localStorage.getItem('theme')
-          const setStoredTheme = theme => localStorage.setItem('theme', theme)
-
-          const getPreferredTheme = () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme) {
-              return storedTheme
-            }
-
-            return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-          }
-
-          const setTheme = theme => {
-            if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-              document.documentElement.setAttribute('data-bs-theme', 'dark')
-            } else {
-              document.documentElement.setAttribute('data-bs-theme', theme)
-            }
-          }
-
-          setTheme(getPreferredTheme())
-
-          const showActiveTheme = (theme, focus = false) => {
-            const themeSwitcher = document.querySelector('#bd-theme')
-
-            if (!themeSwitcher) {
-              return
-            }
-
-            const themeSwitcherText = document.querySelector('#bd-theme-text')
-            const activeThemeIcon = document.querySelector('.theme-icon-active use')
-            const btnToActive = document.querySelector(`[data-bs-theme-value="${theme}"]`)
-            const svgOfActiveBtn = btnToActive.querySelector('svg use').getAttribute('href')
-
-            document.querySelectorAll('[data-bs-theme-value]').forEach(element => {
-              element.classList.remove('active')
-              element.setAttribute('aria-pressed', 'false')
-            })
-
-            btnToActive.classList.add('active')
-            btnToActive.setAttribute('aria-pressed', 'true')
-            activeThemeIcon.setAttribute('href', svgOfActiveBtn)
-            const themeSwitcherLabel = `${themeSwitcherText.textContent} (${btnToActive.dataset.bsThemeValue})`
-            themeSwitcher.setAttribute('aria-label', themeSwitcherLabel)
-
-            if (focus) {
-              themeSwitcher.focus()
-            }
-          }
-
-          window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme !== 'light' && storedTheme !== 'dark') {
-              setTheme(getPreferredTheme())
-            }
-          })
-
-          window.addEventListener('DOMContentLoaded', () => {
-            showActiveTheme(getPreferredTheme())
-
-            document.querySelectorAll('[data-bs-theme-value]')
-              .forEach(toggle => {
-                toggle.addEventListener('click', () => {
-                  const theme = toggle.getAttribute('data-bs-theme-value')
-                  setStoredTheme(theme)
-                  setTheme(theme)
-                showActiveTheme(theme, true)
-                })
-              })
-          })
-         })()  
-        </script>  
+        <script src="/dark.js"></script>  
         <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
-        </script>                
+        </script>
+        <style>
+        .row{margin: 30px;} 
+        </style>              
     </head>
     <body>
     <!--导航栏-->
@@ -110,26 +37,28 @@
                 </div>
             </div>
         </nav>
-        <h1 class="text-center">下载</h1>
-        <div class="text-center container p-5 my-5 bg-primary text-white">
+        <div class="row"> 
+          <h1 class="text-center">下载</h1>
+          <div class="text-center container p-5 my-5 bg-primary text-white col-md rounded">
             <h2 class="text-center">必读</h2>
             <p>源码可以作为模板使用，文章可以转载（CC-BY）</p>
-        </div> 
-        <img class="img-fluid" src="https://cdnjson.com/images/2023/10/14/R-C.png" alt="CC BY">
-        <br>        
-        <div class="text-center">
-        <a href="猪圈.apk" class="btn btn-primary">下载最新安卓app 
-            <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
-              <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" /> 
-              <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
-            </svg> 
-          </a>
+          </div> 
+          <br>        
+         <div class="col-md text-center">
+           <a href="猪圈.apk" class="btn btn-primary">下载最新安卓app 
+             <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
+               <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" /> 
+               <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
+             </svg> 
+           </a>
+          <br><br>
           <a href="源码.tar.gz" class="btn btn-primary">下载最新源码压缩包 
             <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
               <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" /> 
               <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
             </svg> 
           </a>
+         </div>
         </div> 
 
              <!--页脚--> 
