--- a/文章/11班炸药/index.html
+++ b/文章/11班炸药/index.html
@@ -10,7 +10,7 @@
         <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
-        </script>
+        </script>  
     </head>
     <body>    
 <!--导航栏-->
@@ -40,35 +40,28 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
            </a> 
         </div>        
-        <!--标题--> 
-      <div class="my-4">       
-          <h1 class="display-1">11班同学玩炸药</h1><br>
-           <div class="d-flex">           
-             <i class="bi bi-calendar">
-                &nbsp;
-               <time>2023.11.4</time> 
-             </i>
-              &nbsp;
-             <i class="bi bi-fonts">
-                &nbsp;
-               <time>157字</time>              
-             </i>
-           </div>                                                  
-        <div class="d-flex">  
-          <img src="https://cdnjson.com/images/2023/10/22/th.th.jpg" alt="th.jpg" border="0" />  
-            <div class="d-flex">
-              <big class="hp">能启猪</big>
-                &nbsp;
-                <div class="mt-4 p-5 bg-primary text-white rounded">
-                 <big>11班同学在教室里玩炸药，现在被开除了罢</big>
-                </div>
+        <!--标题-->
+      <div class="m-3">  
+        <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded text-center">       
+            <h1 class="display-1">11班同学玩炸药</h1><br>
+            <div class="container">                                                                      
+               <time>2023.11.4</time>                                                                                     
+               <p>157字</p>                                                                                                                                           
+               <div id="article-info">
+                 阅读量: <span class="waline-pageview-count" data-path="<Your/Path/Name>"></span>         
+               </div>                        
             </div>
-        </div>
-        <br>         
+           <br> 
+           <div class="row">                                                               
+             <div class="p-2 bg-primary text-white rounded col-sm">
+               <p>11班同学在教室里玩炸药，现在被开除了罢</p>
+             </div>             
+           </div>                     
+        </div>            
         <hr>
         <p>太离谱了，中午睡完觉，出了个大消息，11班玩炸药被地中海糟老头子校长逮了</p>
                  
-        <!--评论系统-->
+                <!--评论系统-->
         <link href="https://cdn.staticfile.org/waline/2.15.8/waline.min.css" rel="stylesheet">
         <div id="waline"></div>
         <script type="module">
@@ -80,14 +73,15 @@
           serverURL: 'https://waline-1-i3324437.deta.app/',
           reaction: true,
           reaction: [
-         'https://img1.imgtp.com/2023/10/22/Na0XAAut.ico',
-         'https://img1.imgtp.com/2023/10/22/g1ex8MNk.ico',
-         'https://img1.imgtp.com/2023/10/22/ETThSE3z.ico',        
+         'http://chuxinya.top/view.php/e9fba76d6f2a76b97c891d69bd38c272.ico',
+         'http://chuxinya.top/view.php/506a11be5e265f67292e2738012ec9d0.ico',
+         'http://chuxinya.top/view.php/e52a3ac3ca710ad6de6945c4c069e4a1.ico',        
           ],             
-          dark: 'auto',               
+          dark: 'auto',  
+          pageview: true,              
           }); 
         </script>
-      </div> 
+      </div>
         <!--页脚--> 
         <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
             <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
@@ -107,6 +101,6 @@
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-globe" viewbox="0 0 16 16"><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4a9.267 9.267 0 0 1 .64-1.539 6.7 6.7 0 0 1 .597-.933A7.025 7.025 0 0 0 2.255 4H4.09zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a6.958 6.958 0 0 0-.656 2.5h2.49zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5H4.847zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5H4.51zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12c.138.386.295.744.468 1.068.552 1.035 1.218 1.65 1.887 1.855V12H5.145zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11a13.652 13.652 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5H3.82zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855.173-.324.33-.682.468-1.068H8.5zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5a6.959 6.959 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5h2.49zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4a7.966 7.966 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4h2.355z" /></svg> 
               </a>
           </div>
-        </div>        
+        </div>            
     </body>
 </html>                
