--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,7 @@
                 </div>
             </div>
         </nav>
+        <div class="app"></div>
         <h1 class="text-center animate__animated animate__fadeInBottomLeft">小猪的blog</h1> <br>        
         <h6 class="display-6 text-center">最近文章</h6> <br>
         <div class="text-center p text-dark">
@@ -68,7 +69,7 @@
         <div class="tab-content animate__animated animate__fadeInLeftBig">
             <div id="home" class="container tab-pane active">
               <div class="row">
-                <div class="card col-md p-3 my-3">                
+                <div class="card col-md m-3">                
                     <div class="card-body text-center">                    
                         <video
                           id="my-player"
@@ -95,7 +96,7 @@
                         <i class="bi bi-calendar4"></i>                      
                     </div>
                 </div>                                               
-                <div class="card col-md text-center p-3 my-3">
+                <div class="card col-md text-center m-3">
                     <img class="img-fluid rounded" src="https://z1.ax1x.com/2023/11/06/pil02eU.md.jpg" alt="pil02eU.jpg" border="0" />
                     <h5 class="text-center">11班玩炸药</h5>                
                     <div class="card-body">
@@ -113,7 +114,7 @@
                     </div>
                 </div>                              
               <div class="row"> 
-                <div class="card col-md">                
+                <div class="card col-md m-3">                
                     <div class="card-body">                    
                         <img class="img-fluid rounded" src="https://cdnjson.com/images/2023/10/29/sketch1698577243459.png" alt="sketch1698577243459.png" border="0" />
                     </div>
@@ -131,7 +132,7 @@
                     </div>
                 </div>               
                 <br>
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">未来可寄</h5>
                     <div class="card-body">
                         <div class="text-center">
@@ -150,7 +151,7 @@
               </div>
               <br>
               <div class="row">
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">臭手表（大悲）</h5>
                     <div class="card-body">
                         使用沼气电池的手表，699大洋 
@@ -167,7 +168,7 @@
                     </div>
                 </div> 
                 <br><br>
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">能启猪上东兴</h5>
                     <div class="card-body">
                         <div class="text-center">
@@ -184,7 +185,7 @@
               </div> 
                 <br>
               <div class="row">
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">我emo了</h5>
                     <div class="card-body">
                         <div class="text-center">
@@ -199,7 +200,7 @@
                         <i class="bi bi-calendar4"></i>
                     </div>
                 </div> <br>
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">盲憨把自己压缩了</h5>
                     <div class="card-body">
                         QQ浏览器，我做错了什么？ 
@@ -215,7 +216,7 @@
               </div> 
               <br>             
               <div class="row">
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
                     <div class="card-body">
                         更改内容一大堆
@@ -226,7 +227,7 @@
                         <i class="bi bi-calendar4"></i>
                     </div>
                 </div> <br>
-                <div class="card col-md">
+                <div class="card col-md m-3">
                     <h5 class="card-header text-center">更换前端库</h5>
                     <div class="card-body">
                         cdn.jsdelivr.net炸了，被墙了
@@ -238,7 +239,7 @@
                     </div>
                 </div>
               </div> <br>
-                <div class="card">
+                <div class="card m-3">
                     <h5 class="card-header text-center">更换证书</h5>
                     <div class="card-body">
                         更换SSL证书，抛弃cersign
