--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             <!--页脚-->
             <div class="mt-5 p-4 bg-dark text-white text-center">
             <span id="runtime_span"></span>
-              <script srf="/time.js"></script> <img src="/logo-m.svg" alt="icon.png" border="0">
+              <script src="/time.js"></script> 
+              <img src="/logo-m.svg" alt="icon" border="0">
               <h4>由4EVERLAND托管</h4>
               <p>能启猪负责运营</p>
               <div class="btn-group">
